# bottlewatch

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.githooks/: pre-commit
alembic/: env.py
alembic/versions/: 0001_initial_signals.py  0002_scores.py  0003_thesis.py  0004_score_history.py  0005_add_research_snapshots.py  0006_add_score_provenance.py  0007_add_sub_score_history.py  0008_add_score_history_normalization_mode.py  0009_add_signals_released_at.py  f75c24ef6a38_merge_score_history_and_released_at_.py
data/reports/: phase3_backtest.json
docs/manuals/: manual.html
docs/plans/: 2026-06-03-bottlewatch-v1.md  2026-06-04-m2-implementation.md  2026-06-04-m3-implementation.md  2026-06-05-fred-sparql-geo.md  2026-06-06-fixes-and-improvements.md  2026-06-09-progress-bar.md  2026-06-09-regime-schedule-m5.md  2026-06-11-display-names-and-score-help.md  2026-06-11-trend-filter-quadrant-click.md  2026-06-12-value-chain-map.md  2026-06-14-detail-page-improvements.md  2026-06-14-phase1-scoring-improvements.md  2026-06-14-phase2-scoring-improvements.md  2026-06-14-phase3-backtest-validation.md  2026-06-14-phase3-executive-summary.md  2026-06-14-scoring-pipeline-daily-reasoning.md  2026-06-18-improvement-assessment.md  2026-06-18-t-universe-leak-spec.md  2026-06-18-t14-backtest-inference-spec.md  2026-06-18-t22-llm-output-validation-spec.md  2026-06-18-tier1-correctness-spec.md  2026-06-19-iso-capacity-tightness-cadence-bug.md  2026-06-19-momentum-trailing-median-spec.md  claude3-decouple.md  m3-progress.md  m4-backtest-final.md  m4-backtest-initial.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/backtest/: page.tsx
frontend/app/components/: HorizonToggle.tsx  MapNodeSidebar.tsx  MapSearch.tsx  Nav.tsx  QuadrantTickerList.tsx  (+14 more)
launchd/: com.bottlewatch.daily.plist  com.bottlewatch.recompute.plist  com.bottlewatch.refresh.plist  install.sh  uninstall.sh
notebooks/: phase3_backtest_report.ipynb
research/: 00_value_chain.json  00_value_chain.md  00_value_chain.mmd  02_universe.csv  03_data_sources.md  04_scoring_methodology.md  06_capacity_ledger.json  06_regime_thresholds.json  07_geo_overrides.json  scoring_seed.json
research/01_segments/: advanced-node-fabs.md  advanced-packaging.md  cooling-water.md  data-center-shell.md  gpu-asic-silicon.md  hbm-memory.md  networking-interconnect.md  power-generation-oem.md  rack-scale-integration.md  systems-rack-scale.md  transformers-tnd.md
research/05_ontology/: bottlewatch.owl
research/config/: eia_series_spec.json  eia_states.json  eta.json  score_bands.json
research/scripts/: calibrate_score_bands.py
src/bottlewatch/: config.py
(+132 files in other folders)
